--- a/Thing.CoAP.vcxproj.filters
+++ b/Thing.CoAP.vcxproj.filters
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClInclude Include="Thing.CoAP\Packet.h" />
     <ClInclude Include="Thing.CoAP\ContentFormat.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -75,6 +74,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Thing.CoAP\ResponseCallback.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Thing.CoAP\Packet.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
