--- a/examples/Windows/Server-InlineEndpoints/Server-InlineEndpoints.vcxproj.filters
+++ b/examples/Windows/Server-InlineEndpoints/Server-InlineEndpoints.vcxproj.filters
@@ -19,4 +19,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <CustomBuild Include="..\Client\BuildArduinoExamples.i" />
+  </ItemGroup>
 </Project>
